--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ npm install --save-dev ts-node
 npm install swr
 npx shadcn@latest add chart
 npm install @google/generative-ai
+npm install localStorage 
