Visualization and Data Handling improved. only date handle is remaining.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ npx prisma init # run prisma commands in separate single terminal
 # if still not working, run terminal as administrator and run.  
 npm install @clerk/clerk-sdk-node
 npm install swr@latest
+npm install axios
 pip install dotenv
 pip install sqlalchemy
 pip install fastapi  
