--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.24.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.542.0",
+    "marked": "^17.0.1",
     "next": "15.5.2",
     "papaparse": "^5.5.3",
     "react": "19.1.0",
