--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.542.0",
     "marked": "^17.0.1",
     "next": "15.5.2",
@@ -19,6 +21,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
+    "react-to-print": "^3.2.0",
     "recharts": "^3.1.2",
     "swr": "^2.3.6"
   },
